@@ -4,6 +4,7 @@ BUG: Ticket#442 - TPageService getBasePath in namespace form (Qiang)
 BUG: Ticket#467 - typo in TUrlMapping.php (Qiang)
 BUG: TTableCell should render &nbsp; only when Text is not set and there's no child (Qiang)
 BUG: global state was not saved when redirect() is invoked (Qiang)
+BUG: TPager would not display if it was invisible previously (Qiang)
 ENH: Ticket#446 - Added TMetaTagCollection.getMetaTagByID method (Qiang)
 CHG: Ticket#437 - __autoload is replaced by spl_autoload_register (Qiang)
 CHG: Ticket#454 - Redundant PHP Version Check (Qiang)
